--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -5,7 +5,7 @@
 	<%= f.text_field :challenge_spot, :value => @spot %><br>
 	<%= f.label :score %>
 	<%= f.text_field :score %> <br>
-	<%= f.label :skater_challenged %>
-	<%= f.text_field :skater_challenged %><br><br>
+	<%= f.label :skater_id %>
+	<%= f.text_field :skater_id %><br><br>
 	<%= f.submit 'Add challenge' %>
 <% end %>
