--- a/app/views/jams/index.html.erb
+++ b/app/views/jams/index.html.erb
@@ -4,4 +4,4 @@
 	<%= link_to(jam.info, jam_path(jam.id)) %><br>
 <% end %><br>
 
-<a href="/jams/new">Add jam</a>
+<a href="/jams/new"><div class="navigation-elements">New jam</div></a>
