--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -4,6 +4,6 @@
 	</div>
 </div>
 <br>
-<button class="nearest-spot">Nearest spot</button>
-<button class="random-spot">Random spot</button>
-<button><a class="add-spot">Add spot here</a></button>
+<button class="nearest-spot btn btn-primary">Nearest spot</button>
+<button class="random-spot btn btn-primary">Random spot</button>
+<button class="btn btn-primary"><!--<a class="add-spot ">-->Add spot here<!--</a>--></button>
