--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,17 @@
 		        <h4 class="modal-title" id="myModalLabel">Challenge a friend</h4>
 		      </div>
 		      <div class="modal-body">
-		      	Choose the spot<br><br>
+		      	<div class="btn-group challenge-skaters">
+  			  	</div><br><br>
 		      	<div class="challenge-spots">
+  			  	</div><br>
+  			  	<div class="challenge-challenge">
+  			  		<input type="text" class="form-control input-correction" id="challenge-trick" placeholder="Trick"><br><br>					
   			  	</div>
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-primary" data-action="add-challenge">Add challenge</button>
+  			  	
+			  </div>
+		      <div class="modal-footer footer-correction">
+		        <button type="button" class="btn btn-primary" data-action="add-challenge" data-dismiss="modal">Add challenge</button>
 		      </div>
 		    </div>
 		  </div>
@@ -30,10 +35,10 @@
 			<div class="logo"><a href="/">(&nbsp;&nbsp;&nbsp;SKATE&nbsp;&nbsp;OR&nbsp;&nbsp;BYE&nbsp;&nbsp;&nbsp;)</a></div>
 			<div class="account-nav">
 				<% if current_skater %> 
-					<div class="account-actions"><%= current_skater.email %></div> 
+					<div class="account-actions"><span class="label label-info"><%= current_skater.email %></span></div> | 
 					<div class="account-actions"><%= link_to "Log out", logout_path, method: "delete" %></div>
 				<% else %> 
-					<div class="account-actions"><%= link_to "Log in", login_path %></div></li> 
+					<div class="account-actions"><%= link_to "Log in", login_path %></div></li> | 
 					<div class="account-actions"><%= link_to "Sign up", signup_path %></div>
 				<% end %>
 			</div>
@@ -41,7 +46,7 @@
 		<nav>
 			<a href="/spots"><div class="navigation-elements">Free Skate</div></a>
 			<a href="/jams"><div class="navigation-elements">Skate Jams</div></a>
-			<a href="/challenges"><div class="navigation-elements">Challenges</div></a>
+			<a href="/challenges"><div class="navigation-elements">My challenges</div></a>
 			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
   				Challenge a friend
 			</button>
