--- a/app/views/tricks/new.html.erb
+++ b/app/views/tricks/new.html.erb
@@ -5,5 +5,7 @@
 	<%= f.text_field :skater_id, :value => @skater_id %><br>
 	<%= f.label :spot_id %>
 	<%= f.text_field :spot_id, :value => @spot_id %><br>
+	<%= f.label :challenge_id %>
+	<%= f.text_field :challenge_id, :value => @challenge_id %><br><br>
 	<%= f.submit 'Add trick' %>
 <% end %>
