--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,7 @@ body {
 	margin: 0;
 	padding: 0;
 	text-align: center;
+	border-top: 4px solid #337ab7;
 }
 
 a, a:hover, a:focus, a:visited {
@@ -33,6 +34,7 @@ a, a:hover, a:focus, a:visited {
 .logo {
 	font-family: SkateFont;
 	font-size: 40px;
+	margin-top: 10px;
 }
 
 .account-actions {
@@ -89,4 +91,8 @@ a, a:hover, a:focus, a:visited {
 
 .spot-photo {
 	max-width: 600px;
+}
+
+.challenges-nav {
+	display: inline-block;
 }
