--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -1,4 +1,46 @@
-<h1>My challenges</h1>
-<% @challenges.each do |challenge| %>
-	<%= challenge.challenge %><br>
-<% end %>
+<div class="challenges-nav">
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#pending" aria-controls="pending" role="tab" data-toggle="tab">Pending</a></li>
+    <li role="presentation"><a href="#completed" aria-controls="completed" role="tab" data-toggle="tab">Completed</a></li>
+    <li role="presentation"><a href="#to-check" aria-controls="to-check" role="tab" data-toggle="tab">To check</a></li>
+  </ul>
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane fade in active" id="pending"><br>
+		<ul class="list-group" style="display:inline-block">
+			<% @pending_challenges.each do |pending_challenge| %>
+				<li class="list-group-item">
+					<%= pending_challenge.challenge %> (Challenged by <%= Skater.find(pending_challenge.challenger_id).name %>) <a href="/skaters/<%= session[:id] %>/tricks/new?spot_id=<%= pending_challenge.challenge_spot %>&challenge_id=<%= pending_challenge.id %>">Try!</a>
+				</li>
+			<% end %>
+		</ul>
+    </div>
+    <div role="tabpanel" class="tab-pane fade" id="completed"><br>
+    	<% @challenges_completed.each do |challenge_completed| %>
+    		<%= challenge_completed.challenge %>
+    	<% end %>
+    </div>
+    <div role="tabpanel" class="tab-pane fade" id="to-check"><br>
+    	<% @challenges_to_check.each do |challenge_to_check| %>
+    	<% if Trick.where(challenge_id: challenge_to_check.id).first %>
+			<div class="panel panel-default panel-correction" data-challenge-id="<%= challenge_to_check.id %>">
+				<div class="panel-title"><br>
+					<span class="label label-info"><%= challenge_to_check.challenge %> of <%= Skater.find(challenge_to_check.skater_id).name %></span>
+				</div>
+				<div class="panel-body">
+					<iframe class="tricks" src="<%= Trick.where(challenge_id: challenge_to_check.id).first.video %>/embed/simple" width="600" height="600" frameborder="0"></iframe>					
+				</div>
+				<div class="panel-footer">
+					<div class="btn-group">
+						<button type="button" class="btn btn-default" data-action="check-attempt">Bad</button>
+						<button type="button" class="btn btn-default" data-action="check-attempt">Good</button>
+						<button type="button" class="btn btn-default" data-action="check-attempt">Awesome</button>
+			  		</div>
+				</div>
+			</div><br>
+		<% end %>
+		<% end %>
+    </div>
+  </div>
+</div>
