--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -41,7 +41,7 @@
 		<span>You need to <a href="<%= login_path %>">login</a> in order to rate a trick</span>
 	<% end %>
 	</div>
-</div>
+</div><br>
 <% end %>
 <br>
 <% if session[:id] %>
