--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -11,15 +11,21 @@
 		<ul class="list-group" style="display:inline-block">
 			<% @pending_challenges.each do |pending_challenge| %>
 				<li class="list-group-item">
-					<%= pending_challenge.challenge %> (Challenged by <%= Skater.find(pending_challenge.challenger_id).name %>) <a href="/skaters/<%= session[:id] %>/tricks/new?spot_id=<%= pending_challenge.challenge_spot %>&challenge_id=<%= pending_challenge.id %>">Try!</a>
+					<%= pending_challenge.challenge %> (Challenged by <%= Skater.find(pending_challenge.challenger_id).name %>) 
+					<div data-toggle="modal" data-target="#myModal3" class="navigation-elements" data-skater-id="<%= session[:id] %>" data-spot-id="<%= pending_challenge.challenge_spot %>" data-challenge-id="<%= pending_challenge.id %>">Try!</div>
+					<!-- <a href="/skaters/<%= session[:id] %>/tricks/new?spot_id=<%= pending_challenge.challenge_spot %>&challenge_id=<%= pending_challenge.id %>">Try!</a> -->
 				</li>
 			<% end %>
 		</ul>
     </div>
     <div role="tabpanel" class="tab-pane fade" id="completed"><br>
+    	<ul class="list-group" style="display:inline-block">
     	<% @challenges_completed.each do |challenge_completed| %>
-    		<%= challenge_completed.challenge %>
+    		<li class="list-group-item">
+    			<%= challenge_completed.challenge %><br>
+    		</li>
     	<% end %>
+    	</ul>
     </div>
     <div role="tabpanel" class="tab-pane fade" id="to-check"><br>
     	<% @challenges_to_check.each do |challenge_to_check| %>
