--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,10 +39,10 @@
 		        <h4 class="modal-title" id="myModalLabel">Upload your trick</h4>
 		      </div>
 		      <div class="modal-body">
-		      	<input type="text" class="form-control input-correction" id="trick-video" placeholder="Video"><br>					
+		      	<input type="text" class="form-control input-correction" id="trick-video" placeholder="Awesome video"><br>					
 			  </div>
 		      <div class="modal-footer footer-correction">
-		        <button type="button" class="btn btn-primary" data-action="upload-trick" data-skater-id="<%= session[:id] %>" data-dismiss="modal">UPLOAD TRICK</button>
+		        <button type="button" class="btn btn-primary" data-action="upload-trick" data-skater-id="<%= session[:id] %>" data-dismiss="modal">UPLOAD</button>
 		      </div>
 		    </div>
 		  </div>
