--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -1,17 +1,11 @@
+<br>
 <%= form_for @spot do |f| %>
-	<%= f.label :level %>
-	<%= f.text_field :level %><br>
-	<%= f.label :floor_quality %>
-	<%= f.text_field :floor_quality %><br>
-	<%= f.label :teachers %>
-	<%= f.text_field :teachers %><br>
-	<%= f.label :photo %>
-	<%= f.text_field :photo %><br>
-	<%= f.label :latitude %>
-	<%= f.text_field :latitude, :value => @latitude %><br>
-	<%= f.label :longitude %>
-	<%= f.text_field :longitude, :value => @longitude %><br>
-	<%= f.label :address %>
-	<%= f.text_field :address, :value => @addressOk %><br><br>
-	<%= f.submit 'Add spot' %>
+	<%= f.text_field :level, :placeholder => 'Level', class: 'form-control input-correction' %><br><br>
+	<%= f.text_field :floor_quality, :placeholder => 'Floor quality', class: 'form-control input-correction' %><br><br>
+	<%= f.text_field :teachers, :placeholder => 'Teachers', class: 'form-control input-correction' %><br><br>
+	<%= f.text_field :photo, :placeholder => 'Photo', class: 'form-control input-correction' %><br><br>
+	<%= f.text_field :latitude, :value => @latitude , :placeholder => 'Latitude', class: 'form-control input-correction' %><br><br>
+	<%= f.text_field :longitude, :value => @longitude , :placeholder => 'Longitude', class: 'form-control input-correction' %><br><br>
+	<%= f.text_field :address, :value => @addressOk , :placeholder => 'Address', class: 'form-control input-correction' %><br><br><br>
+	<%= f.submit 'Add spot', class: 'navigation-elements' %>
 <% end %>
