--- a/app/views/jams/new.html.erb
+++ b/app/views/jams/new.html.erb
@@ -1,11 +1,11 @@
-<%= form_for @jam do |f| %>
-	<%= f.label :spot_id %>
-	<%= f.text_field :spot_id %><br>
-	<%= f.label :date %>
-	<%= f.date_field :date %><br>
-	<%= f.label :time %>
-	<%= f.time_field :time %> <br>
-	<%= f.label :info %>
-	<%= f.text_field :info %><br><br>
-	<%= f.submit 'Add jam' %>
-<% end %>
+<div class="panel panel-default">
+	<div class="panel-body">
+		<%= form_for @jam do |f| %>
+			<%= f.text_field :spot_id, class: 'form-control input-correction', :placeholder => 'Spot' %><br><br>
+			<%= f.date_field :date, class: 'form-control input-correction', :placeholder => 'Date' %><br><br>
+			<%= f.time_select :time, class: 'form-control input-correction', :placeholder => 'Time' %><br><br>
+			<%= f.text_field :info, class: 'form-control input-correction', :placeholder => 'Info' %><br><br><br>
+			<%= f.submit 'Add jam', class: 'navigation-elements' %>
+		<% end %>
+	</div>
+</div>
