--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,6 +40,17 @@ a, a:hover, a:focus, a:visited {
 .account-actions {
 	display: inline-block;
 }
+/*
+.menu-elements {
+	display: inline-block;
+	border-radius: 3px;
+	padding: 5px 20px;
+	border: 3px solid #337ab7;
+	background: #337ab7;
+	color: white;
+	font-weight: bold;
+	cursor:pointer;
+}*/
 
 .navigation-elements {
 	display: inline-block;
