--- a/app/views/jams/show.html.erb
+++ b/app/views/jams/show.html.erb
@@ -1,8 +1,9 @@
-<h2><%= @jam.info %></h2><br>
+<h2><%= @jam.name %></h2><br>
 <ul class="list-group" style="display:inline-block">
   <li class="list-group-item"><a href="/spots/<%= @spot.id %>"><img class="spot-photo" src="<%= @spot.photo %>"></a></li>
   <li class="list-group-item">Date: <%= @jam.date %></li>
   <li class="list-group-item">Hour: <%= @jam.time %></li>
+  <li class="list-group-item">Info: <%= @jam.info %></li>
 </ul>
 <br>
 
