--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,10 +56,10 @@
 		        <h4 class="modal-title" id="myModalLabel">Upload your attempt</h4>
 		      </div>
 		      <div class="modal-body">
-		      	<input type="text" class="form-control input-correction" id="attempt-video" placeholder="Video"><br>					
+		      	<input type="text" class="form-control input-correction" id="attempt-video" placeholder="Awesome video"><br>					
 			  </div>
 		      <div class="modal-footer footer-correction">
-		        <button type="button" class="btn btn-primary" data-action="upload-attempt" data-dismiss="modal">UPLOAD ATTEMPT</button>
+		        <button type="button" class="btn btn-primary" data-action="upload-attempt" data-dismiss="modal">UPLOAD</button>
 		      </div>
 		    </div>
 		  </div>
