--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -1,4 +1,4 @@
-<div class="challenges-nav">
+<br><div class="challenges-nav">
   <!-- Nav tabs -->
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation" class="active"><a href="#pending" aria-controls="pending" role="tab" data-toggle="tab">Pending</a></li>
@@ -8,31 +8,30 @@
   <!-- Tab panes -->
   <div class="tab-content">
     <div role="tabpanel" class="tab-pane fade in active" id="pending"><br>
-		<ul class="list-group" style="display:inline-block">
+		
 			<% @pending_challenges.each do |pending_challenge| %>
-				<li class="list-group-item">
-					<%= pending_challenge.challenge %> (Challenged by <%= Skater.find(pending_challenge.challenger_id).name %>)
-					<div data-toggle="modal" data-target="#myModal3" class="navigation-elements" data-skater-id="<%= session[:id] %>" data-spot-id="<%= pending_challenge.challenge_spot %>" data-challenge-id="<%= pending_challenge.id %>">Try!</div>
+					<span class="label label-info span-correction"><%= pending_challenge.challenge %></span>&nbsp;&nbsp;Challenged by <%= Skater.find(pending_challenge.challenger_id).name %>&nbsp;&nbsp;
+					<div data-toggle="modal" data-target="#myModal3" class="navigation-elements" data-skater-id="<%= session[:id] %>" data-spot-id="<%= pending_challenge.challenge_spot %>" data-challenge-id="<%= pending_challenge.id %>">Try</div><br><br>
 					<!-- <a href="/skaters/<%= session[:id] %>/tricks/new?spot_id=<%= pending_challenge.challenge_spot %>&challenge_id=<%= pending_challenge.id %>">Try!</a> -->
-				</li>
+				
 			<% end %>
-		</ul>
+		
     </div>
     <div role="tabpanel" class="tab-pane fade" id="completed"><br>
-    	<ul class="list-group" style="display:inline-block">
+    	
     	<% @challenges_completed.each do |challenge_completed| %>
-    		<li class="list-group-item">
-    			<%= challenge_completed.challenge %><br>
-    		</li>
+    		
+    			<span class="label label-info span-correction"><%= challenge_completed.challenge %></span><br><br>
+    		
     	<% end %>
-    	</ul>
+    	
     </div>
     <div role="tabpanel" class="tab-pane fade" id="to-check"><br>
     	<% @challenges_to_check.each do |challenge_to_check| %>
     	<% if Trick.where(challenge_id: challenge_to_check.id).first %>
 			<div class="panel panel-default panel-correction" data-challenge-id="<%= challenge_to_check.id %>">
 				<div class="panel-title"><br>
-					<span class="label label-info"><%= challenge_to_check.challenge %> of <%= Skater.find(challenge_to_check.skater_id).name %></span>
+					<span class="label label-info span-correction"><%= challenge_to_check.challenge %> of <%= Skater.find(challenge_to_check.skater_id).name %></span>
 				</div>
 				<div class="panel-body">
 					<iframe class="tricks" src="<%= Trick.where(challenge_id: challenge_to_check.id).first.video %>/embed/simple" width="600" height="600" frameborder="0"></iframe>					
