--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -4,8 +4,8 @@
 	<%= f.text_field :floor_quality, :placeholder => 'Floor quality', class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :teachers, :placeholder => 'Teachers', class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :photo, :placeholder => 'Photo', class: 'form-control input-correction' %><br><br>
-	<%= f.text_field :latitude, :value => @latitude , :placeholder => 'Latitude', class: 'form-control input-correction' %><br><br>
-	<%= f.text_field :longitude, :value => @longitude , :placeholder => 'Longitude', class: 'form-control input-correction' %><br><br>
-	<%= f.text_field :address, :value => @addressOk , :placeholder => 'Address', class: 'form-control input-correction' %><br><br><br>
+	<%= f.text_field :latitude, :value => @latitude , :placeholder => 'Latitude', disabled: true, class: 'form-control input-correction' %><br><br>
+	<%= f.text_field :longitude, :value => @longitude , :placeholder => 'Longitude', disabled: true, class: 'form-control input-correction' %><br><br>
+	<%= f.text_field :address, :value => @addressOk , :placeholder => 'Address', disabled: true, class: 'form-control input-correction' %><br><br><br>
 	<%= f.submit 'Add spot', class: 'navigation-elements' %>
 <% end %>
