--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,8 +39,7 @@
 		        <h4 class="modal-title" id="myModalLabel">Upload your trick</h4>
 		      </div>
 		      <div class="modal-body">
-		      	<div class="btn-group jam-roles">
-  			  	</div><br>					
+		      	<input type="text" class="form-control input-correction" id="trick-video" placeholder="Awesome video"><br>
 			  </div>
 		      <div class="modal-footer footer-correction">
 		        <button type="button" class="btn btn-primary" data-action="upload-trick" data-skater-id="<%= session[:id] %>" data-dismiss="modal">UPLOAD</button>
